--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url(./fonts.css);
 
 * {
     margin: 0;
@@ -35,16 +36,16 @@ body {
 }
 
 .title {
-    text-shadow: 1px 4px 5px #fff;
+    text-shadow: 3px 4px 1px #000000;
 
     &::before,
     &::after {
-        content: '~~';
-        width: 10px;
-        height: 10px;
-        margin: 0 12px;
-        color: #e90000;
-        text-shadow: 1px 4px 10px #f00;
+        content: '';
+        background: url('../images/honor.svg') center / cover;
+        width: 40px;
+        height: 40px;
+        display: inline-block;
+        margin: 0px 25px;
     }
 }
 
